# mac-term-guardian

./: Cargo.toml  go.mod
.github/workflows/: release.yml
src/: main.rs
